# Arduino_Task_Creator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: artask.h  cmdlib.h  collectinfo.h  filepath.h  tolllib.h
json/: arduino.json  cmdlib.json  cmdlib_en.json  cmdlib_zhCN.json
lib/: README.md  artask.h  cmdlib.h  collectinfo.h
lib/gflags/lib/cmake/gflags/: gflags-nonamespace-targets-release.cmake  gflags-nonamespace-targets.cmake  gflags-targets-release.cmake  gflags-targets.cmake
lib/jsoncpp/lib/cmake/jsoncpp/: jsoncpp-targets-release.cmake  jsoncpp-targets.cmake
src/: CMakeLists.txt  OSRead.ps1  artask.cpp  cmdlib.cpp  collectinfo.cpp  filepath.cpp  tolllib.cpp
src/py/: CMakeLists.txt  atc-make.py  com_reg.py  com_serial.py
